--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@sentry/node": "^6.3.0",
     "@sentry/tracing": "^6.3.0",
-    "@snowtop/ent": "^0.1.0-alpha8",
+    "@snowtop/ent": "^0.1.0-alpha9",
     "@snowtop/ent-email": "0.0.1",
     "@snowtop/ent-passport": "0.0.1",
     "@snowtop/ent-password": "0.0.1",
@@ -37,19 +37,19 @@
     "csv-parse": "^4.15.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-graphql": "^0.12.0",
-    "graphql": "^15.7.2",
-    "graphql-upload": "^11.0.0",
+    "graphql": "^16.5.0",
+    "graphql-helix": "^1.12.0",
+    "graphql-upload": "^13.0.0",
     "memoizee": "^0.4.15",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@snowtop/ent-graphql-tests": "0.0.1",
+    "@snowtop/ent-graphql-tests": "^0.1.0-alpha2",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
-    "@types/graphql-upload": "^8.0.4",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jest": "^27.0.1",
     "@types/luxon": "^2.0.4",
     "@types/passport": "^1.0.7",
