--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -90,7 +90,7 @@ jobs:
           git clone https://github.com/lolopinto/ent-starter.git 
           cd ent-starter
           git checkout v0.1
-          npm install '@snowtop/ent@0.1.0-alpha9' '@snowtop/ent-email@0.1.0-alpha1' --force
+          npm install @snowtop/ent '@snowtop/ent-email@0.1.0-alpha1'
           mkdir -p src/schema
           cat ../.github/testdata/schema1.json | tsent generate schemas 
           tsent codegen
@@ -107,7 +107,7 @@ jobs:
       - name: add new field
         run: |
           cd ent-starter
-          npm install @snowtop/ent-phonenumber@0.1.0-alpha1 --force
+          npm install @snowtop/ent-phonenumber@0.1.0-alpha1
           cat ../.github/testdata/schema2.json | tsent generate schemas --force
           tsent codegen
         env:
