--- a/ts/packages/ent-passport/tsconfig.json
+++ b/ts/packages/ent-passport/tsconfig.json
@@ -17,6 +17,7 @@
     "emitDecoratorMetadata": true,
     //    "noImplicitAny": true,
     "declaration": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
