--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -34,9 +34,9 @@
     "tsconfig-paths": "^3.11.0"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.1.0-alpha13",
+    "@snowtop/ent": "^0.1.0-alpha14",
     "@snowtop/ent-email": "^0.1.0-alpha1",
-    "@snowtop/ent-passport": "^0.0.1",
+    "@snowtop/ent-passport": "^0.1.0-alpha1",
     "@snowtop/ent-password": "^0.0.1",
     "@snowtop/ent-phonenumber": "^0.1.0-alpha1",
     "@types/express-session": "^1.17.3",
