--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -139,3 +139,6 @@ jobs:
         run: |
           cd ent-starter
           tsent delete_schema Contact --disable_prompts
+        env:
+          DB_CONNECTION_STRING: 'postgres://postgres:postgres@localhost:5432/postgres'
+          LOCAL_AUTO_SCHEMA: 'true'
