--- a/ts/packages/ent-soft-delete/package.json
+++ b/ts/packages/ent-soft-delete/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent-soft-delete",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha1",
   "description": "snowtop ent soft delete",
   "main": "dist/soft_delete.js",
   "types": "dist/soft_delete.d.ts",
@@ -29,13 +29,13 @@
   },
   "homepage": "https://github.com/lolopinto/ent#readme",
   "devDependencies": {
-    "@snowtop/ent": "^0.0.39-alpha3",
+    "@snowtop/ent": "^0.1.0-alpha20",
     "@types/jest": "^26.0.23",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6"
   },
   "peerDependencies": {
-    "@snowtop/ent": ">= 0.0.38"
+    "@snowtop/ent": ">= 0.1.0-alpha20"
   },
   "dependencies": {
     "@types/express": "^4.17.13"
