--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -28,10 +28,10 @@
   "dependencies": {
     "@sentry/node": "^6.3.0",
     "@sentry/tracing": "^6.3.0",
-    "@snowtop/ent": "^0.1.0-alpha9",
-    "@snowtop/ent-email": "0.0.1",
-    "@snowtop/ent-passport": "0.0.1",
-    "@snowtop/ent-password": "0.0.1",
+    "@snowtop/ent": "^0.1.0-alpha19",
+    "@snowtop/ent-email": "^0.1.0-alpha1",
+    "@snowtop/ent-passport": "^0.1.0-alpha1",
+    "@snowtop/ent-password": "^0.1.0-alpha1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "csv-parse": "^4.15.3",
@@ -45,17 +45,18 @@
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@snowtop/ent-graphql-tests": "^0.1.0-alpha2",
+    "@alex_neo/jest-expect-message": "^1.0.5",
+    "@snowtop/ent-graphql-tests": "^0.1.0-alpha3",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.9",
     "@types/graphql-upload": "^8.0.11",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.0.3",
+    "@types/jest-expect-message": "^1.0.3",
     "@types/luxon": "^2.0.4",
     "@types/passport": "^1.0.7",
     "@types/supertest": "^2.0.11",
     "jest": "^27.4.3",
-    "jest-expect-message": "^1.0.2",
     "ts-jest": "^27.1.0",
     "tsconfig-paths": "^3.11.0"
   }
