--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@snowtop/ent-graphql-tests": "^0.1.0-alpha2",
+    "@snowtop/ent-graphql-tests": "^0.1.0-alpha3",
     "@types/express": "^4.17.11",
     "@types/jest": "^27.0.1",
     "@types/jest-expect-message": "^1.0.3",
@@ -35,9 +35,9 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.1.0-alpha9",
-    "@snowtop/ent-phonenumber": "^0.0.1",
-    "@snowtop/ent-soft-delete": "^0.0.1",
+    "@snowtop/ent": "^0.1.0-alpha20",
+    "@snowtop/ent-phonenumber": "^0.1.0-alpha1",
+    "@snowtop/ent-soft-delete": "^0.1.0-alpha1",
     "@types/node": "^15.0.3",
     "@types/pg": "^8.6.1",
     "better-sqlite3": "^7.4.3",
