--- a/.github/workflows/docs_build.yml
+++ b/.github/workflows/docs_build.yml
@@ -2,7 +2,7 @@ name: Docs CI
 
 on:
   pull_request:
-    branches: [main]
+    branches: [main, v0.1]
     paths:
       - 'docs/**'
 
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
 
       - uses: actions/cache@v2
         with:
