--- a/docs/package.json
+++ b/docs/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.7",
+    "acorn": "^8.7.1",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
