--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -14,6 +14,7 @@
     "experimentalDecorators":true,
     "emitDecoratorMetadata": true,
     "declaration": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["./examples", "tests/**/*"]
