--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha85-772da780-280d-11ed-b529-93e513dde450",
+  "version": "0.1.0-alpha86",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
