--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha89",
+  "version": "0.1.0-alpha89-f7a5e4d0-2fd4-11ed-a086-b1ede81717d8",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
