--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -35,7 +35,7 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.1.0-alpha89",
+    "@snowtop/ent": "^0.1.0-alpha89-f0fb88f0-339a-11ed-86d7-e929c5e37369",
     "@snowtop/ent-phonenumber": "^0.1.0-alpha1",
     "@snowtop/ent-soft-delete": "^0.1.0-alpha4",
     "@types/node": "^15.0.3",
