--- a/examples/todo-sqlite/package.json
+++ b/examples/todo-sqlite/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^28.1.6",
     "@types/jest-expect-message": "^1.0.3",
+    "@types/luxon": "^3.0.1",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "jest": "^28.1.3",
@@ -35,7 +36,7 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
-    "@snowtop/ent": "^0.1.0-alpha89-f0fb88f0-339a-11ed-86d7-e929c5e37369",
+    "@snowtop/ent": "^0.1.0-alpha89-16dc3410-33c4-11ed-9fc4-5d4a927887be",
     "@snowtop/ent-phonenumber": "^0.1.0-alpha1",
     "@snowtop/ent-soft-delete": "^0.1.0-alpha4",
     "@types/node": "^15.0.3",
@@ -44,6 +45,7 @@
     "express": "^4.17.1",
     "graphql": "^16.5.0",
     "graphql-helix": "^1.12.0",
-    "libphonenumber-js": "^1.7.56"
+    "libphonenumber-js": "^1.7.56",
+    "luxon": "^3.0.3"
   }
 }
