--- a/.github/workflows/go_ci.yml
+++ b/.github/workflows/go_ci.yml
@@ -35,23 +35,23 @@ jobs:
           - 5432:5432
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
       
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       with:
         path: ~/go/pkg/mod
         key: ${{ runner.os }}-go-${{ hashFiles('go.sum') }}
         restore-keys: |
           ${{ runner.os }}-go-
 
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       with:
         path: ~/.cache/pip
         key: ${{ runner.os }}-pip-
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - uses: actions/cache@v2
+    - uses: actions/cache@v3
       with:
         path: ~/.npm
         key: ${{ runner.os }}-node-${{ hashFiles('ts/package-lock.json') }}
@@ -64,15 +64,15 @@ jobs:
         go-version: 1.19
         
     - name: Set up python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '>3.6' 
+        python-version: '3.9' 
       
     - name: Install auto_schema
       run: python3 -m pip install wheel auto_schema==0.0.12
 
     - name: Setup nodejs
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
         node-version: 16.x
     - run: npm install -g ts-node prettier typescript @swc/core @swc/cli
