--- a/ts/package.json
+++ b/ts/package.json
@@ -19,14 +19,13 @@
     "memoizee": "^0.4.15",
     "minimist": "^1.2.6",
     "pascal-case": "^3.1.2",
-    "pg": "^8.0.3",
+    "pg": "^8.8.0",
     "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "snake-case": "^3.0.3",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.2",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
@@ -67,16 +66,17 @@
     "graphql-helix": "^1.12.0",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
-    "jest": "^28.1.3",
+    "jest": "^29.0.3",
     "jest-date-mock": "^1.0.8",
-    "jest-each": "^28.1.3",
+    "jest-each": "^29.0.3",
     "jest-expect-message": "^1.0.2",
-    "jest-mock": "^28.1.3",
+    "jest-mock": "^29.0.3",
     "node-sql-parser": "^3.1.0",
     "object-path": ">=0.11.6",
     "pluralize": "^8.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^28.0.7"
+    "ts-jest": "^29.0.1",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "compile": "tsc",
