--- a/ts/package.json
+++ b/ts/package.json
@@ -75,7 +75,8 @@
     "object-path": ">=0.11.6",
     "pluralize": "^8.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^29.0.1"
+    "ts-jest": "^29.0.1",
+    "typescript": "^4.8.3"
   },
   "scripts": {
     "compile": "tsc",
