--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -73,7 +73,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
-      - run: npm install -g ts-node prettier typescript@4.4.2 @swc/core @swc/cli jest
+      - run: npm install -g ts-node prettier typescript @swc/core @swc/cli jest
       - run: |
           cd ts 
           npm ci
@@ -118,7 +118,7 @@ jobs:
         run: |
           cd ent-starter
           cp ../.github/testdata/user.ts.example src/ent/user.ts
-          tsent codegen --write-all
+          tsent codegen
           cp ../.github/testdata/jest.config.js.example jest.config.js
           cp ../.github/testdata/verify_graphql_schema.test.ts.example src/verify_graphql_schema.test.ts
           npm install ts-jest jest @types/jest
