--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha90-adfbaa90-3e2f-11ed-a527-396aef64994a",
+  "version": "0.1.0-alpha90-99798560-3e2a-11ed-8ea1-635cc7a33740",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,7 +8,7 @@
     "example": "examples"
   },
   "dependencies": {
-    "@types/node": "^18.7.23",
+    "@types/node": "^15.0.2",
     "camel-case": "^4.1.2",
     "dataloader": "^2.0.0",
     "glob": "^7.1.6",
@@ -19,13 +19,14 @@
     "memoizee": "^0.4.15",
     "minimist": "^1.2.6",
     "pascal-case": "^3.1.2",
-    "pg": "^8.8.0",
+    "pg": "^8.0.3",
     "prettier": "^2.3.2",
     "reflect-metadata": "^0.1.13",
     "snake-case": "^3.0.3",
     "ts-node": "^10.2.1",
     "tsconfig-paths": "^3.11.0",
     "tslib": "^2.3.1",
+    "typescript": "^4.4.2",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
@@ -44,7 +45,7 @@
     "@alex_neo/jest-expect-message": "^1.0.5",
     "@types/bcryptjs": "^2.4.2",
     "@types/better-sqlite3": "^5.4.1",
-    "@types/express": "^4.17.14",
+    "@types/express": "^4.17.9",
     "@types/glob": "^7.1.1",
     "@types/graphql-upload": "^8.0.11",
     "@types/jest": "^28.1.6",
@@ -61,22 +62,21 @@
     "@types/uuid": "^8.3.0",
     "better-sqlite3": "^7.4.1",
     "email-addresses": "^5.0.0",
-    "express": "^4.18.1",
+    "express": "^4.17.1",
     "graphql": "^16.5.0",
     "graphql-helix": "^1.12.0",
     "graphql-type-json": "^0.3.2",
     "graphql-upload": "^13.0.0",
-    "jest": "^29.0.3",
+    "jest": "^28.1.3",
     "jest-date-mock": "^1.0.8",
-    "jest-each": "^29.0.3",
+    "jest-each": "^28.1.3",
     "jest-expect-message": "^1.0.2",
-    "jest-mock": "^29.0.3",
+    "jest-mock": "^28.1.3",
     "node-sql-parser": "^3.1.0",
     "object-path": ">=0.11.6",
     "pluralize": "^8.0.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^29.0.1",
-    "typescript": "^4.8.3"
+    "ts-jest": "^28.0.7"
   },
   "scripts": {
     "compile": "tsc",
