--- a/docs/package.json
+++ b/docs/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "@algolia/client-search": "^4.9.1",
-    "@docusaurus/core": "^2.0.0-beta.21",
-    "@docusaurus/preset-classic": "^2.0.0-beta.21",
+    "@docusaurus/core": "^2.1.0",
+    "@docusaurus/preset-classic": "^2.1.0",
     "@mdx-js/react": "^1.6.21",
     "@svgr/webpack": "^5.5.0",
     "@types/react": "^17.0.7",
@@ -25,7 +25,6 @@
     "file-loader": "^6.2.0",
     "raw-loader": "^4.0.2",
     "react": "^17.0.1",
-    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.1",
     "url-loader": "^4.1.1"
   },
