--- a/ts/packages/ent-passport/package.json
+++ b/ts/packages/ent-passport/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent-passport",
-  "version": "0.1.0-alpha1",
+  "version": "0.1.0-alpha2",
   "description": "snowtop ent passport integration",
   "main": "dist/passport.js",
   "types": "dist/passport.d.ts",
@@ -29,30 +29,29 @@
   },
   "homepage": "https://github.com/lolopinto/ent#readme",
   "peerDependencies": {
-    "@snowtop/ent": ">=0.1.0-alpha14"
+    "@snowtop/ent": ">=0.1.0-alpha90"
   },
   "devDependencies": {
-    "@snowtop/ent": "^0.1.0-alpha14",
-    "@snowtop/ent-graphql-tests": "^0.1.0-alpha1",
+    "@snowtop/ent": "^0.1.0-alpha90",
+    "@snowtop/ent-graphql-tests": "^0.1.0-alpha3",
     "@types/express-session": "^1.17.3",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^29.0.3",
     "@types/passport-strategy": "^0.2.35",
     "@types/supertest": "^2.0.11",
     "express": "^4.17.1",
     "graphql": "^16.5.0",
-    "jest": "^27.4.3",
+    "jest": "^29.1.1",
     "jest-expect-message": "^1.0.2",
-    "jest-mock": "^27.4.2",
+    "jest-mock": "^29.1.1",
     "pg": "^8.6.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.1.0"
+    "ts-jest": "^29.0.2"
   },
   "dependencies": {
     "express-session": "^1.17.1",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-strategy": "^1.0.0",
-    "ts-jest": "^27.0.5"
+    "passport-strategy": "^1.0.0"
   }
 }
