--- a/examples/ent-rsvp/backend/package.json
+++ b/examples/ent-rsvp/backend/package.json
@@ -28,7 +28,7 @@
   "dependencies": {
     "@sentry/node": "^6.3.0",
     "@sentry/tracing": "^6.3.0",
-    "@snowtop/ent": "^0.1.0-alpha91",
+    "@snowtop/ent": "^0.1.0-alpha92-56721980-4046-11ed-ba1f-832778cd7daa",
     "@snowtop/ent-email": "^0.1.0-alpha1",
     "@snowtop/ent-passport": "^0.1.0-alpha2",
     "@snowtop/ent-password": "^0.1.0-alpha1",
