--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha91",
+  "version": "0.1.0-alpha92-56721980-4046-11ed-ba1f-832778cd7daa",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
