--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@snowtop/ent",
-  "version": "0.1.0-alpha92-967de650-516a-11ed-9473-e5c09061b05b",
+  "version": "0.1.0-alpha92",
   "description": "snowtop ent framework",
   "main": "index.js",
   "types": "index.d.ts",
