--- a/python/Pipfile
+++ b/python/Pipfile
@@ -14,6 +14,7 @@ sqlalchemy = "==1.4.35"
 psycopg2 = "==2.9.3"
 autopep8 = "==1.5.4"
 python-dateutil= "==2.8.2"
+inflect= "==6.0.2"
 
 [requires]
 python_version = "3.8"
